mejoro estados explorados en backTracking